This is a record of changes to SerialEM since it was first publicly released.

* marks changes or enhancements noticeable to the user, or items of particular
significance.
============================================================================
6/6/19: Started taking account of changes in beam shift calibration when
changing alpha and mag on JEOL to apply the right amount of beam shift for the
image shift; also excluded the View/Search shift offsets from the image shift
used to determine needed beam shift.

6/5/19: Started keeping image and beam shift values as doubles on JEOL to
reduce creep from rounding errors over repeated cycles (In 3.7).

6/4/19: Added property to set factors for the initial spot size movement when
calibrating beam shift at different alphas on a JEOL (In 3.7).

6/4/19: Fixed crash measuring pixel size from a float image (In 3.7).

6/2/19: Added ability to report and set filament current on JEOL.

5/31/19: Fixed picking beam shift calibration at same mag and different alpha
instead of transforming one at same alpha when using PLA (In 3.7).

5/28/19: Fixed handling of K3 references with CDS mode, stopped getting defect
list for K3, and stopped writing a defect file if it has nothing to correct.

5/25/19: Capability to make a file marking that an image file is open for a
tilt series (added 4/15/19) was fixed for bidirectional series (In 3.7).

5/24/19: Added ability to restore original stage X/Y position after tilting
and added options to the tilt script commands for using it.

5/24/19: Moved option-setting for Ctffind fitting to a dialog.

5/24/19: Added property to set interval over which dose calibration is
considered valid.

5/24/19: Fixed Setup supermontage, broken 8/16/17 (In 3.7).

5/22/19: Made RecordAndTiltTo command set sign of backlash properly (In 3.7).

5/22/19: SEM_3-7-5
5/22/19: Prevented negative overlaps when fitting montage to small polygon;
prevented single piece from being put on skip list (In 3.7).
